tests/duarouter/errors/empty_vclass/empty_vclass_test_alts_longer/errors.duarouter
Error: Attribute 'vClass' in definition of vType '0' is empty.
Quitting (on error).
